ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "kavya.website"
    - "*.kavya.website"
    secretName: nginx-tls
  rules:
  - host: kavya.website
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
